fix: Remove overflow-y

--- a/src/app/modules/misc/components/authors/authors.component.css
+++ b/src/app/modules/misc/components/authors/authors.component.css
@@ -1,7 +1,3 @@
-:host {
-  overflow-y: scroll;
-}
-
 .container {
   max-width: 1200px;
   margin: 20px auto 0;
