--- a/src/app/modules/posts/posts.component.css
+++ b/src/app/modules/posts/posts.component.css
@@ -1,7 +1,3 @@
-:host {
-  overflow-y: scroll;
-}
-
 .background-image {
   width: 100%;
   background: #000;
